
0.42 to be released
    - Fixed a bug that crashed Padre while moving panels with outline
      enabled (GARU)
    - The Directory browser hidden files support now automatically
      recognises intermediate directories (blib etc) in Perl distributions,
      and correctly ignores them (ADAMK)
    - Various performance improvements to directory tree (ADAMK)
    - New search engine accomplished to directory tree (GABRIELMAD)
    - Initial Padre actions support which means an action can be re-used 
      by anything running on Padre. Keyboard shortcut conflict warnings are
      implemented (AZAWAWI)
    - Added the "Artistic" and "COPYING" (GPLv1) files as well a note to the
      "README" about licensing per the request of the 
      http://directory.fsf.org/ maintainers. (SHLOMIF)
    - Added a "right margin" option which will show a line at the specified
      column (BRICAS)
    - Now new files belong to the project from where they were created till
      they are saved (GABRIELMAD)
    - Directory Tree shows the project directory or if none file is opened
      the user's home directory (GABRIELMAD)
    - Install some of the examples in the share directory and add an
      Open Example menu option (SZABGAB)
    - Adding Padre::Wx->add_pane_info convenience method to prevent the need
      for the stupid ugly Wx::AuiPaneInfo method chaining (ADAMK)
    - Create the Left panel and moved the Directory tool into it (ADAMK)
    - Upgrade Wx tree navigation to handle detached floating panels (ADAMK)
    - Implemented Smart Highlighting. Double click on a word to select it
      and a green squiggle will be shown for each matching word (AZAWAWI)
    - Now users can choose which is the project directory that Directory
      Tree must show (GABRIELMAD)
    - Moved close operations into Close... submenu (ADAMK)
    - Added "Close This Project" to close all open files in the same project
      as the current file (ADAMK)